# cryptex-node

./: Dockerfile
pallets/society/: Cargo.toml  README.md
pallets/society/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: run.sh
